--- a/webinterface/package.json
+++ b/webinterface/package.json
@@ -1,12 +1,16 @@
 {
-  "name": "new-react-app",
+  "name": "my-app",
+  "homepage": "https://bvo4.github.io/CS6903ProjectSite",
   "version": "1.0.0",
   "description": "A new react app without CRA",
   "main": "index.js",
   "scripts": {
-    "start": "webpack-dev-server .",
-    "build": "Webpack .",
-    "test": "test"
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
   },
   "author": "",
   "license": "ISC",
@@ -18,10 +22,12 @@
     "@babel/runtime": "^7.17.2",
     "babel-eslint": "^10.1.0",
     "babel-loader": "^8.2.3",
+    "css-loader": "^6.7.1",
     "eslint": "^8.9.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-jest": "^26.1.0",
+    "style-loader": "^3.3.1",
     "webpack": "^5.68.0",
     "webpack-cli": "^4.9.2",
     "webpack-dev-server": "^4.7.4"
@@ -29,11 +35,27 @@
   "dependencies": {
     "@babel/cli": "^7.17.0",
     "@coreui/react": "^4.1.2",
+    "build": "^0.1.4",
     "dom": "^0.0.3",
+    "less-loader": "^10.2.0",
     "path": "^0.12.7",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-native": "^0.68.1",
     "react-router": "^6.3.0",
+    "react-scripts": "^5.0.1",
     "styled-components": "^5.3.5"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
